--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/stappbot/Bamazon#readme",
   "dependencies": {
+    "console.table": "^0.10.0",
     "inquirer": "^7.0.0",
     "mysql": "^2.17.1",
     "prompt": "^1.0.0"
